# bite-lang

./: Cargo.toml
examples/: state.compiled.core  state.core
src/: core.rs  lib.rs  main.rs  syntax.rs
src/codegen/: mod.rs
src/codegen/c/: syntax.rs
src/core/: closure.rs  context.rs  conversion.rs  expr.rs  infer.rs  mod.rs  normalizer.rs  subst.rs  ty.rs
src/parser/: core.pest  core.rs  mod.rs  syntax.pest  syntax.rs
src/utils/: mod.rs  ptr.rs  sexp.rs  unescape.rs
