[package]
name = "bite-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
either = "1"
once_cell = "1"
pest = "2"
pest_derive = "2"
smartstring = "*"
thiserror = "1"
typed-arena = "2"
